<resources>
    <string name="app_name" translatable="false">ReMemoryDroid</string>
    <string name="str_cat">Català</string>
    <string name="str_es">Español</string>
    <string name="str_en">English</string>
    <string-array name="emocions">
        <item>Selecciona una emoció aqui</item>
        <item>Happy</item>
        <item>Orgulloso</item>
        <item>Felix</item>
        <item>Satisfecho</item>
        <item>Lleno de amor</item>
        <item>Eufórico</item>
        <item>Entusiasmado</item>
    </string-array>
    <string name="auth_failed">Failed in Auth</string>
    <string name="loading">Loading</string>
    <string name="signed_out">You just signed out</string>
    <string name="emailpassword_title_text">Credentials</string>
    <string name="Next">Next</string>
    <string name="Save">Save</string>
    <string name="desc_firebase_lockup" translatable="false">ReMemoryDroid</string>
    <string name="hint_email">Assesor\'s email</string>
    <string name="hint_password">Assesor\'s password</string>
    <string name="sign_in">Log in</string>
    <string name="create_account">Create Assesser\'s user</string>
    <string name="sign_out">Sign out Assesor (%s)</string>
    <string name="verify_email">Verify email</string>
    <string name="emailpassword_status_fmt">User\'s email: %s</string>
    <string name="firebase_status_fmt">User: %s</string>
    <string name="Required">Required</string>
    <string name="EmailNotVerifiedYet">Email not verified yet</string>
    <string name="sign_out_Pacient">Change Pacient</string>
    <string name="AssesserArea">Assesor\'s Area</string>
    <string name="PacientSignUp">Sign Up a pacient</string>
    <string name="PacientSelection">Select a pacient</string>
    <string name="PacientID">Pacient ID</string>
    <string name="DeletePacient">Delete pacient</string>
    <string name="CurrentUser">Current Pacient User</string>
    <string name="Attention">Attention</string>
    <string name="OK">OK</string>
    <string name="KO">Cancel</string>
    <string name="UserSelectionDialago">You selected user number %s, is it correct?</string>
    <string name="NoNuserIDSelected">You didn\'t introduce any pacient ID</string>
    <string name="MenuChangePacient">Here you can change the pacient user</string>
    <string name="UserDeleteMessage">You are about to DELETE user number %s. ARE YOU SURE?</string>
    <string name="IncorrecPassword">Password incorrecte</string>
    <string name="PasswordDialog">Introduce your assesor\'s password</string>
    <string name="IntroducePassword">Introduce your assesor password</string>
    <string name="CUName">Name: %s</string>
    <string name="CULastName">Last Name: %s\n</string>
    <string name="SignUpPacientTitleActivity">Sign Up Pacient</string>
    <string name="Name">Name</string>
    <string name="SurName">Surname</string>
    <string name="LastName">Last Name</string>
    <string name="NameFieldEmpty">Introduce pacient\'s name</string>
    <string name="IDFieldEmpty">Introduce an user\'s pacient ID</string>
    <string name="NameNotDigits">Name field can\'t contain numbers</string>
    <string name="LastNameNotDigits">Lastname can\'t contain numbers nor special characters</string>
    <string name="SurNameNotDigits">Surname can\'t contain numbers</string>
    <string name="IDonlyDigits">ID\'s user pacient only accepts numbers</string>
    <string name="IDlength4">ID can\'t be greater than 9999</string>
    <string name="IDlength1">ID must be at least 1 digit</string>
    <string name="LastNameEmpty">Introduce pacient lastname</string>
    <string name="NameLength">Check the name length please, it should be from 2 to 30 characters maximum</string>
    <string name="LastNameLength">Check the lastname length please, it should be from 2 to 30 characters maximum</string>
    <string name="SurnameLength">Check the surname length please, it should be from 2 to 30 characters maximum</string>
    <string name="SurnameEmpty">Introduce a surname please</string>
    <string name="Episodes">Episodes</string>
    <string name="Version">Version</string>
    <string name="EpisodeSelection">Episode Selection</string>
    <string name="LongVersion">Long version</string>
    <string name="ShortVersion">Short version</string>
    <string name="TreatmentsArea">Treatments Area</string>
    <string name="Backwards">Back</string>
    <string name="SelectionVersionEpisode">You have to select a version and episode</string>
    <string name="Games">Memory and focusing games</string>
    <string name="Album">Pictures album</string>
    <string name="Memory">Memory improvment guide</string>
    <string name="EpisodeSelected">Episode Selected: %s</string>
    <string name="VersionSelected">Version selected: %s</string>
    <string name="From">from</string>
    <string name="Question1Pel1">I\'m often feeling quite awaken</string>
    <string name="Very">Very</string>
    <string name="AtAll">At all</string>
    <string name="NameOfEpisode">Episode\'s name</string>
    <string name="TimeEpisode">Time</string>
    <string name="DateEpisode">Date</string>
    <string name="WrongPassword">Wrong Password</string>
    <string name="UserDeleted">Pacient user deleted:</string>
    <string name="AlertDialaogTest">Please, mark up the option which is the closest how you are feeling right now</string>
    <string name="Question2Pel1">I\'m feeling capable of recalling important things to me</string>
    <string name="Question3Pel1">I\'m feeling capable of recalling things I do along the day</string>
    <string name="Question4Pel1">I\'m feeling capable to make an effort to get over the difficulties</string>
    <string name="Question5Pel1">I\'m feeling capable of doing tasks which I propose to myself</string>
    <string name="Question6Pel1">I\'m feeling capable of finding slution to a problem</string>
    <string name="DialogResting">Be aware that you can rest any time and continue later</string>
    <string name="InstructonsBreathing">Follow the next instruccions you will hear next to this.\n\nClose your eyes if you desire it.</string>
    <string name="DialogVideo1">You will watch a film made by images choosen by you and made by your portable camera. \n\nWe ask you to carefully observe the entire images sequence, paying the fullest attention to everything is shown.</string>
    <string name="AddingEpisode">Add episode</string>
    <string name="EpisodeIntroduceDate">Introduce episode\'s date</string>
    <string name="EpisodeNameIntroduce">Introduce episode\'s name</string>
    <string name="EpisodeTimeIntroduce">Introduce episode\'s time scope</string>
    <string name="AddNewEpisode">Add a new episode (Name, Date, Time)</string>
    <string name="EpisodeAdded">Episode\'s number is</string>
    <string name="UserDoesNotExist">User does not exist in the database</string>
    <string name="UserAlreadyExist">User already exists</string>
    <string name="IDalreadyExists">This ID already exists, write a different one</string>
    <string name="StopRecording">Stop recording</string>
    <string name="Recording">Recording</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="DoingGreat">You are doing it great %s!</string>
    <string name="ThankYou">Thank you!</string>
    <string name="WhenItHappened">When did it happen?</string>
    <string name="EpisodeSeasonTime">Episode\'s season time</string>
    <string name="Summer">Summer</string>
    <string name="Spring">Spring</string>
    <string name="Winter">Winter</string>
    <string name="Autumn">Autumn</string>
    <string name="WhatWasTheWeather">What was the weather?</string>
    <string name="SunnyDay">Sunny day</string>
    <string name="Rainy">Rainy</string>
    <string name="Cloudly">Cloudly</string>
    <string name="FoggyDay">Foggy day</string>
    <string name="action_settings">Settings</string>
    <string name="HowLongItLast">How long did it last?</string>
    <string name="LessThan2Hours">Less than 2 hours</string>
    <string name="Between2and4">Between 2 and 4 hours</string>
    <string name="MoreThan4Hours">More than 4 hours</string>
    <string name="Month">Month</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="November">November</string>
    <string name="Desember">Desember</string>
    <string name="October">October</string>
    <string name="DayTime">Day time</string>
    <string name="Morning">Morning</string>
    <string name="Night">Night</string>
    <string name="Afternoon">Afternoon</string>
    <string name="WhereItHappened">Where did it happen?</string>
    <string name="GeographicLocalization">Geographic location</string>
    <string name="InTheCity">In the city where I live</string>
    <string name="OutOfCity">Out of the city/town where I live</string>
    <string name="EverythingHappens">Everything happens in the same place</string>
    <string name="TwoEnviroments">There are 2 different eniroments</string>
    <string name="ThreeEnviroments">There are 3 different enviroments</string>
    <string name="MoreThan3Enviroments">There are more than 3 different enviroments</string>
    <string name="HowManyEnviroments">How many enviroments are there?</string>
    <string name="OutSide">In an outter space</string>
    <string name="InSide">In an inner space</string>
    <string name="Location">Location</string>
    <string name="Monday">Monday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="PerceptiveDetails">Percetive details and sensorials</string>
    <string name="HowManySounds">Which sounds were there?</string>
    <string name="Silence">Silence</string>
    <string name="PeopleTalking">People talking</string>
    <string name="Music">Music</string>
    <string name="NatureSounds">Sounds of the nature (birds, water)</string>
    <string name="Temperature">What was the temperature?</string>
    <string name="Cold">Cold</string>
    <string name="Warm">Warm</string>
    <string name="NeitherColdWarm">Neither cold nor warm</string>
    <string name="Odor">Pleasent odors</string>
    <string name="UnPleasentOdor">Unpleasent odors</string>
    <string name="PeopleAppearing">People who appears</string>
    <string name="PeopleActions">Actions which are being done by people who appears</string>
    <string name="Talking">Talking</string>
    <string name="Eating">Eating</string>
    <string name="Walking">Walking</string>
    <string name="Dancing">Dancing</string>
    <string name="AntherAction">They do another action</string>
    <string name="EmotionsDuringEpisode">Emotions during the episode</string>
    <string name="TheyAreHappy">They are happy</string>
    <string name="TheyAreAngry">They are angry</string>
    <string name="TheyAreSad">They are sad</string>
    <string name="TheyAreSuprised">They are surprised</string>
    <string name="TheyAreScared">They are scared</string>
    <string name="EmotionsLabel1">Emotions observed on the people who are interacted with</string>
    <string name="EmotionsLabel2">Own expermimented emotions during the episode</string>
    <string name="WasHappy">I was happy</string>
    <string name="WasSad">I was sad</string>
    <string name="wasAngry">I was angry</string>
    <string name="WasScared">I was scared</string>
    <string name="WasSorprised">I was sorprised</string>
    <string name="NoEmotion">I didn\'t experience any concret emotion</string>
    <string name="PacientAnswers">Pacient answers</string>
    <string name="sign_out_menu">Sign out (%s)</string>
    <string name="PacientIssues">Pacient issues</string>
    <string name="AssessorIssues">Assessor issues</string>
</resources>