<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context="com.rememorydroid.oriolsecall.rememorydroid.Preguntes2Activity$Fragment4">


    <Button
        android:id="@+id/btNextPeople4"
        style="@style/Next_button"
        android:layout_marginEnd="41dp"
        android:layout_alignBottom="@+id/btBackPeople4"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btBackPeople4"
        style="@style/Back_button"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="84dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PeopleAppearing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/EmotionsDuringEpisode"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/borde"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/EmotionsLabel2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgFragment41Q2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/cbTheyAngry"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/TheyAreAngry" />

                    <RadioButton
                        android:id="@+id/cbTheyHappy"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/TheyAreHappy" />

                    <RadioButton
                        android:id="@+id/cbTheySurprised"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/TheyAreSuprised" />

                    <RadioButton
                        android:id="@+id/cbTheySad"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/TheyAreSad" />

                    <RadioButton
                        android:id="@+id/cbTheyScared"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/TheyAreScared" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/borde"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/EmotionsLabel1"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgFragment42Q2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/cbNoExperience"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/NoEmotion" />

                    <RadioButton
                        android:id="@+id/cbSorprised"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/WasSorprised" />

                    <RadioButton
                        android:id="@+id/cbScared"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/WasScared" />

                    <RadioButton
                        android:id="@+id/cbAngry"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/wasAngry" />

                    <RadioButton
                        android:id="@+id/cbSad"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/WasSad" />

                    <RadioButton
                        android:id="@+id/cbHappy"
                        style="@style/radioGroupElementsTwice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/WasHappy"
                        android:textAlignment="textStart" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
