<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context="com.rememorydroid.oriolsecall.rememorydroid.Preguntes2Activity$PlaceholderFragment">


    <Button
        android:id="@+id/btBackPeople"
        style="@style/Back_button"
        android:layout_alignBottom="@+id/btNextPeople"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp" />

    <Button
        android:id="@+id/btNextPeople"
        style="@style/Next_button"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PeopleAppearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PeopleAppearing"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PeopleActions"
            android:textAlignment="center"
            android:textSize="39sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgPeople"
            style="@style/radioGroupElementsActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/rbPeople1"
                style="@style/radioGroupElementsActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Talking" />

            <RadioButton
                android:id="@+id/rbPeople2"
                style="@style/radioGroupElementsActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Eating" />

            <RadioButton
                android:id="@+id/rbPeople3"
                style="@style/radioGroupElementsActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Walking" />

            <RadioButton
                android:id="@+id/rbPeople4"
                style="@style/radioGroupElementsActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dancing" />

            <RadioButton
                android:id="@+id/rbPeople5"
                style="@style/radioGroupElementsActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AntherAction" />

        </RadioGroup>

    </LinearLayout>


</RelativeLayout>
