<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rememorydroid.oriolsecall.rememorydroid.PreguntesActivity$PlaceholderFragment"
    android:screenOrientation="landscape"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvWhenItHappened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WhenItHappened"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWhenSubTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EpisodeSeasonTime"
            android:textAlignment="center"
            android:textSize="39sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgWhenTime"
            style="@style/radioGroupElementsWhen"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb1When"
                style="@style/radioGroupElementsWhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Summer" />

            <RadioButton
                android:id="@+id/rb2When"
                style="@style/radioGroupElementsWhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Autumn" />

            <RadioButton
                android:id="@+id/rb3When"
                style="@style/radioGroupElementsWhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Winter" />

            <RadioButton
                android:id="@+id/rb4When"
                style="@style/radioGroupElementsWhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Spring" />

        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/btNextTime"
        style="@style/Next_button"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout2"
        android:layout_marginStart="28dp" />

    <Button
        android:id="@+id/btBackTime"
        style="@style/Back_button"
        android:layout_marginStart="55dp"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignParentStart="true" />

</RelativeLayout>